src/objects/TS_MobileProfileTemplate__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>SAP_0111__c</fullName>
        <label>SAP_0111</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_0333__c</fullName>
        <label>SAP_0333</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_0975__c</fullName>
        <label>SAP_0975</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>TS MobileProfileTemplate</label>
</CustomObject>